<resources>
    <string name="app_name">Guidary</string>
    <string name="title_diary">引導日記</string>
    <string name="title_handwritediary">手寫日記</string>
    <string name="title_OCR">OCR</string>
    <string name="title_home">歷史紀錄</string>
    <string name="title_dashboard">統計圖表</string>
    <string name="title_notifications">日記</string>
    <string name="title_friend">社群</string>
    <string name="title_maybelike">推薦</string>
    <string name="title_activity_login">登入</string>
    <string name="prompt_email">信箱(帳號)</string>
    <string name="prompt_password">密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">登入</string>

    <string-array name="tag_list">
        <item>美食</item>
        <item>購物</item>
        <item>戀愛</item>
        <item>旅遊</item>
        <item>休閒娛樂</item>
        <item>其他</item>
    </string-array>

    <string-array name="profession_list">
        <item>學生</item>
        <item>上班族</item>
        <item>農業</item>
        <item>漁業</item>
        <item>交通運輸業</item>
        <item>餐旅業</item>
        <item>製造業</item>
        <item>娛樂業</item>
        <item>其他</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_internet_connection_not_available">Internet Connection Not Available</string>
    <string name="string_some_thing_wrong">Something went wrong.</string>
    <string name="internal_storage">Internal storage</string>
    <string name="chooser_title">Choose Files</string>
</resources>
