<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_new_home_foreground"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_friend"
        android:icon="@mipmap/ic_new_friend_foreground"
        android:title="@string/title_friend" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_maybelike"
        android:icon="@mipmap/ic_new_maybelike_foreground"
        android:title="@string/title_maybelike" />

</menu>
